# music_db_finder

./: .gitignore  Makefile  oauth.json  pyproject.toml  setup.cfg
docs/: design_doc.md
src/music_db_finder/: fuzz_helpers.py
src/notebooks/: .cache  building_class.ipynb  discogs_find.ipynb  showcase.ipynb
tests/: test_connections.py  test_helpers.py
